--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El</title>
+    <title>Elim </title>
 </head>
 <body>
-    
+   <div>
+    <h2>Bonjour</h2>
+   </div> 
 </body>
-</html>
+</html>*-
