--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Elim Communication</title>
 </head>
 <body>
-   <div>
-    <h2>Bonjour</h2>
+   <div class="bodi">
+    <div class="blocInfo" >
+        <img src="./img/photo.png" style="width: 100px;" alt="">
+        <h2>Salim CISSÉ</h2>
+        <h5>Victime de la revolte 1968</h5>
+    </div>
    </div> 
 </body>
 </html>
