--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="bodi">
     <div class="blocInfo" >
-        <img src="./img/photo.png" style="width: 100px;" alt="">
+        <img src="./img/photo.png" style="width: 100px;" alt="" />
         <h2>Salim CISSÉ</h2>
         <h5>Victime de la revolte 1968</h5>
     </div>
