--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="manifest.json">
-    <script src="scripts.js" ></script>
-    <title>Elim Communication</title>
+    <link rel="stylesheet" href="/css/index.css">
+    <script src="/scripts.js" ></script>
+    <link rel="stylesheet" href="/manifest.json">
+    <title>Elim </title>
 </head>
 <body>
    <div class="bodi">
@@ -25,6 +25,7 @@
             <audio src="./audio/piste1/2-audio.mp3"></audio>
             <audio src="./audio/piste1/3-audio.mp3"></audio>
             <img src="./icon/play.svg" alt="">
+            <img src="./icon/pause.svg" alt="">
         </div>
     </div>
    </div> 
