--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
             <input type="range" id="track" min="0" value="0" />
             <span id="track-time" >1:00</span>
         </div>
+        <div class="blocVolume">
+            <input type="range" id="volume" min="0" max="1" value="1" step="0.1">
+            <span id="volume-value" >100%</span>
+        </div>
         <div class="playBotone">
             <audio src="./audio/piste1/1-audio.mp3"></audio>
             <audio src="./audio/piste1/2-audio.mp3"></audio>
             <audio src="./audio/piste1/3-audio.mp3"></audio>
-            <img src="./icon/play.svg" alt="">
-            <img src="./icon/pause.svg" alt="">
+            <img src="./icon/pause.svg" alt="" id="pause-bottone">
+            <img src="./icon/play.svg" alt="" id="play-bottone" > 
+            <img src="./icon/stop.svg" alt="" id="stop-bottone">
         </div>
     </div>
    </div> 
