--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/index.css">
-    <script src="/scripts.js" ></script>
-    <link rel="stylesheet" href="/manifest.json">
+    <script src="./scripts.js" ></script>
+    <link rel="apple-touch-icon" href="/assets/icons/icon-96x96.png">
+  <meta name="apple-mobile-web-app-status-bar" content="white">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="theme-color" content="white">
+    <link rel="manifest" href="/manifest.json">
     <title>Elim </title>
 </head>
 <body>
@@ -26,8 +30,7 @@
         </div>
         <div class="playBotone">
             <audio src="./audio/piste1/1-audio.mp3"></audio>
-            <audio src="./audio/piste1/2-audio.mp3"></audio>
-            <audio src="./audio/piste1/3-audio.mp3"></audio>
+           
             <img src="./icon/pause.svg" alt="" id="pause-bottone">
             <img src="./icon/play.svg" alt="" id="play-bottone" > 
             <img src="./icon/stop.svg" alt="" id="stop-bottone">
