--- a/index.html
+++ b/index.html
@@ -19,21 +19,17 @@
         <h2>Salim CISSÉ</h2>
         <h5>Victime de la revolte 1968</h5>
 
-        <div class="bareDeProgresions" >
-            <span id="elapsed" >0:00</span>
-            <input type="range" id="track" min="0" value="0" />
-            <span id="track-time" >1:00</span>
-        </div>
-        <div class="blocVolume">
-            <input type="range" id="volume" min="0" max="1" value="1" step="0.1">
-            <span id="volume-value" >100%</span>
-        </div>
         <div class="playBotone">
-            <audio src="./audio/piste1/1-audio.mp3"></audio>
-           
-            <img src="./icon/pause.svg" alt="" id="pause-bottone">
-            <img src="./icon/play.svg" alt="" id="play-bottone" > 
-            <img src="./icon/stop.svg" alt="" id="stop-bottone">
+            <audio id="audio-1" src="./audio/piste1/1-audio.mp3"></audio>
+            <img style="margin-left: 10px;" src="./icon/play.svg" alt="" id="play-bottone" > 
+            <div style="display: flex; justify-content: center; align-items: center; margin-left: 10px;" >
+                <img src="/icon/ecouteur.svg" alt="">
+                <div style="display: flex; flex-direction: column; margin-left: 10px;" class="infoFran">
+                <h5>Français</h5>
+                <span>2:40</span>
+                </div>
+            </div>
+
         </div>
     </div>
    </div> 
